# carsim-ml

./: .gitignore  README.md  Untitled.ipynb  analyzer.py  autoencoder.py  main.py  pyproject.toml  segmenter.py  speed.py  speed_dataset.py
datasets/: img_dataset.py  loc_est_dataset.py  semantic_segmentation_dataset.py  speed_dataset.py
models/: segmenter.py  speed_model.py  vision_input.py  vision_reconstructor.py
trainers/: loc_prediction_from_imgs.py  reconstructor.py  semantic_segmenter.py  speed_estimate.py
