[tool.poetry]
name = "carsim-ml"
version = "0.1.0"
description = ""
authors = ["Cameron Reid <csreid.cr@gmail.com>"]
readme = "README.md"
packages = [{include = "carsim_ml"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.5"
torch = "^2.0.1"
numpy = "^1.25.2"
pandas = "^2.0.3"
torchvision = "^0.15.2"
tensorboard = "^2.14.0"
tqdm = "^4.66.1"
matplotlib = "^3.8.0"
moviepy = "^1.0.3"
scikit-learn = "^1.3.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
